[package]
name = "disjoint_set_bench"
version = "0.1.0"
authors = ["Jonathan Gruner <jogru0@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Benchmarks for different disjoint set data structure implementations"
repository = "https://github.com/jogru0/disjoint_set_bench"
publish = false
readme = true

[dependencies]
disjoint = "0.6.0"
partitions = "0.2.4"
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
